--- a/package.json
+++ b/package.json
@@ -16,14 +16,24 @@
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
+    "fs-extra": "^11.3.0",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
+    "socket.io": "^4.8.1",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.14",
     "yup": "^1.6.1"
