--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
     "socket.io": "^4.8.1",
